--- a/styles1.css
+++ b/styles1.css
@@ -1,9 +1,9 @@
 /*SPRING*/
 
 body{
-background-color: rgb(251, 152, 177);
+background-color: rgb(217, 250, 195);
 }
 
 #swapStyleButton {
-    background-color: #da8888;
+    background-color: #d5faa6;
 }
