--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,12 @@ body::-webkit-scrollbar-thumb:hover {
 #swapStyleButton:hover {
     opacity: 1; 
 }
+
+.base-img {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999; 
+    pointer-events: none; /*clicks*/
+}
