--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,36 @@ body {
     padding: 0;
     overflow-x: hidden;
 }
+
 header {
-padding-top:1%;
-}
-
-main {
+    position:fixed;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 1% 20px;
+    background-color: #f4f4f4;
+    border-bottom: 1px solid #ccc;
 }
 
-h1{
+.current-season {
+    font-size: 1.2em;
+    color: #333;
+}
+
+.what-is-this {
+    text-decoration: none;
+    color: #007bff;
+    font-size: 1.1em;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: color 0.3s;
+}
+
+.what-is-this:hover {
+    color: #0056b3;
+}
+
+h1 {
     font-size: 6vw;
     margin: 20px;
     text-align: center;
@@ -28,25 +46,13 @@ h2 {
     font-family: Times New Roman, sans-serif;
 }
 
-/* Poema-container */
 .poem-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100vh; 
-    overflow-y: scroll; 
 }
 
-/* Poema-scroll vertical */
-.poem-container::-webkit-scrollbar {
-    display: none; 
-}
-.poem-container {
-    scrollbar-width: none; 
-}
-
-/* Poema Section */
 .poem-section {
     width: 90%;
     max-width: 600px;
@@ -64,41 +70,15 @@ h2 {
     text-align: left;
     font-size: 1vw;
     font-family: Times New Roman, sans-serif;
-  transition: transform 0.3s ease, background-color 0.3s ease; 
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .poem:hover {
-    transform: scale(1.20); 
-  
+    transform: scale(1.2);
 }
 
-
-
-
-
-body::-webkit-scrollbar {
-    padding: 10pt; /* not working hmm criar container só pra isto? */
-    width: 8px;
-    height: 8px;
-}
-
-body::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-body::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    transition: opacity 0.3s ease; /*not working ver depois*/
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 0, 0, 0.5);
-}
-
-/*button*/
-
-#swapStyleButton {
+/* Swap button */
+.swap-style-button {
     background-color: #776060;
     color: #fff;
     border: none;
@@ -107,11 +87,12 @@ body::-webkit-scrollbar-thumb:hover {
     font-size: 1vw;
     border-radius: 50%;
     opacity: 0.3;
-    transition: opacity 0.3s ease; 
+    transition: opacity 0.3s ease;
+    z-index: 1000;
 }
 
-#swapStyleButton:hover {
-    opacity: 1; 
+.swap-style-button:hover {
+    opacity: 1;
 }
 
 .base-img {
@@ -119,6 +100,6 @@ body::-webkit-scrollbar-thumb:hover {
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 999; 
-    pointer-events: none; /*clicks*/
+    z-index: 999;
+    pointer-events: none;
 }
