--- a/styles1.css
+++ b/styles1.css
@@ -7,3 +7,7 @@ background-color: rgb(217, 250, 195);
 #swapStyleButton {
     background-color: #d5faa6;
 }
+
+.fixed-header {
+    background-color: rgba(171, 252, 179, 0.9);
+}
