--- a/styles1.css
+++ b/styles1.css
@@ -9,5 +9,6 @@ background-color: rgb(217, 250, 195);
 }
 
 .fixed-header {
-    background-color: rgba(171, 252, 179, 0.9);
-}
+    background: linear-gradient(to bottom, rgb(174, 253, 71), rgba(122, 248, 134, 0));
+   }
+   
