--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
     font-size: 6vw;
-    margin: 20px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -84,30 +84,16 @@ h2 {
 
 
 
-.what-is-this {
-    text-decoration: none;
-    color: #007bff;
-    font-size: 1.1em;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: color 0.3s;
-}
-
-
-
-
 
 
 .fixed-header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 60px;
+    height: 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    padding: 0 20px;
     z-index: 1000;
 }
 
