--- a/styles.css
+++ b/styles.css
@@ -129,9 +129,65 @@ h2 {
 
 
 .logo {
-    width: 50px;
+    width: 5%;
     height: auto;
     position: absolute;
-    left: 50%-10pt;
+    left: 50% ;
     transform: translateX(-50%);
+}
+
+
+/* "What is this?" link styling */
+.what-is-this {
+    font-size: 1.2vw;
+    color: #555;
+    text-decoration: none;
+    position: absolute;
+    right: 20px;
+    cursor: pointer;
+}
+
+.what-is-this:hover {
+    color: #000;
+}
+
+/* pop up what is this  */
+.info-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8); /* Background darkening */
+    backdrop-filter: blur(5px); 
+    z-index: 2000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.info {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+.close-button {
+    background-color: #776060;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
 }
