--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,6 @@ h1 {
     margin-bottom: 20px;
     text-align: center;
     width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    border-right: 2px solid #000000;
-    animation: typing 2s steps(12, end), cursor .2s steps(12, end) infinite;
-}
-@keyframes typing {
-    from { width: 0 }
-}
-@keyframes cursor {
-    50% { border-color: transparent }
 }
 
 h2 {
@@ -300,4 +290,5 @@ textarea {
     background-size: cover;
     --i: 10;
   }
+  /*________________________________*/
   
