--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+  background-color: rgb(255, 255, 248);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -55,14 +56,14 @@ h2 {
 
 /* Swap button */
 .swap-style-button {
-    background-color: #776060;
+    background-color: #754a4a;
     color: #fff;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
     font-size: 1vw;
-    border-radius: 50%;
-    opacity: 0.3;
+    border-radius: 100%;
+    opacity: 0.5;
     transition: opacity 0.3s ease;
     z-index: 2100;
 }
