--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(255, 255, 248);
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 0 0 10vw 0;
     padding: 0;
     overflow-x: hidden;
     transition: opacity 0.5s ease-in-out;
