--- a/styles2.css
+++ b/styles2.css
@@ -12,7 +12,11 @@ body{
     background: linear-gradient(to bottom, rgb(216, 202, 48), rgba(122, 248, 134, 0));
  }
    
- .swap-style-button {
+ .swap-style-button, .quote-button {
       background-color: #bb9e20;
       color: #ffffff;
+ }
+
+ .quote-display {
+   background-color: #ffe3b9;
  }
