--- a/styles.css
+++ b/styles.css
@@ -114,20 +114,6 @@ h3{
     left: 20px; 
 }
 
-
-.what-is-this {
-    font-size: 1.2vw;
-    text-decoration: none;
-    color: #555;
-    position: absolute;
-    right: 20px; 
-}
-
-.what-is-this:hover {
-    color: #000;
-}
-
-
 .logo {
     width: 5%;
     height: auto;
@@ -174,6 +160,8 @@ h3{
     max-width: 80%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     text-align: center;
+    font-family: Times New Roman, sans-serif;
+    font-size: 1.2vw;
 }
 
 textarea {
@@ -195,10 +183,8 @@ textarea {
     border: none;
     padding: 10px 20px;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 50%;
 }
-
-
 
 
 /* Container for images__________________________________________*/
@@ -338,3 +324,79 @@ textarea {
   color: #999;
   font-style: normal;
 }
+/*calendar pop-up_______________________________________________*/
+ .days-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #754a4a;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 1.2vw;
+            border-radius: 50%;
+            z-index: 2100;
+        }
+    
+        .days-button:hover {
+            opacity: 0.8;
+        }
+    
+        /* Days Pop-up Overlay */
+        .days-overlay {
+          display: none; 
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.8);
+          z-index: 2200;
+          align-items: center;
+          justify-content: center;
+          backdrop-filter: blur(5px);
+      }
+  
+      .days-popup {
+          background-color: #FEFEF3;
+          padding: 20px;
+          border-radius: 8px;
+          text-align: center;
+          width: 80%;
+          max-width: 400px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      }
+  
+      .days-list {
+          display: grid;
+          grid-template-columns: repeat(7, 1fr);
+          gap: 10px;
+          margin: 20px 0;
+      }
+  
+      .days-list button {
+          background-color: #4CAF50;
+          color: white;
+          border: none;
+          padding: 10px;
+          font-size: 1.2rem;
+          cursor: pointer;
+          border-radius: 50%;
+          transition: background-color 0.3s ease;
+      }
+  
+      .days-list button:hover {
+          background-color: #45a049;
+      }
+  
+
+      .close-days-popup {
+          background-color: #776060;
+          color: white;
+          border: none;
+          padding: 10px 20px;
+          cursor: pointer;
+          border-radius: 50%;
+          margin-top: 20px;
+      }
