--- a/styles3.css
+++ b/styles3.css
@@ -4,7 +4,7 @@ body{
     background-color: rgb(248, 210, 178);
     }
 
- #swapStyleButton {
+ #swapStyleButton, .days-list button {
         background-color: #e18d06;
  }
 
@@ -12,7 +12,7 @@ body{
         background: linear-gradient(to bottom,rgb(221, 136, 67), rgba(122, 248, 134, 0));
        }
        
-.swap-style-button, .quote-button {
+.swap-style-button, .quote-button, .days-button {
               background-color: #855d07;
               color: #fff;
  }
@@ -20,3 +20,7 @@ body{
  .quote-display {
        background-color: rgb(255, 198, 151);
  }
+
+ .days-list button:hover {
+       background-color: #ca7300;
+   }
