--- a/styles4.css
+++ b/styles4.css
@@ -4,7 +4,7 @@ body{
     background-color: rgb(222, 253, 253);
    }
 
-#swapStyleButton {
+#swapStyleButton, .days-list button{ 
     background-color: #4ea3a4;
 }
 
@@ -12,7 +12,7 @@ body{
     background: linear-gradient(to bottom,  rgb(108, 196, 194), rgba(122, 248, 134, 0));
    }
    
-.swap-style-button, .quote-button {
+.swap-style-button, .quote-button, .days-button {
     background-color: #1ea8ca;
     color: #fff;
 }
@@ -20,3 +20,7 @@ body{
 .quote-display {
     background-color: #b4e2f5;
   }
+
+.days-list button:hover {
+    background-color: #14a3db;
+}
