--- a/styles1.css
+++ b/styles1.css
@@ -1,8 +1,25 @@
 /*SPRING*/
 
-body{
-background-color: rgb(236, 255, 223);
-}
+body {
+    background-color: rgb(236, 255, 223);
+    animation-name: backgr;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes backgr {
+    0% {
+      background-color: rgb(236, 255, 223);
+    }
+    50% {
+      background-color: rgb(237, 255, 208);
+    }
+    100% {
+      background-color: rgb(236, 255, 223);
+    }
+  }
+  o {background-color: rgb(237, 255, 208)}
+
 
 #swapStyleButton, .days-list button {
     background-color: #d5faa6;
