--- a/styles3.css
+++ b/styles3.css
@@ -2,7 +2,23 @@
 
 body{
     background-color: rgb(248, 210, 178);
+    animation-name: backgr;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes backgr {
+    0% {
+      background-color:rgb(248, 210, 178);
     }
+    50% {
+      background-color: rgb(255, 219, 208);
+    }
+    100% {
+      background-color: rgb(248, 210, 178);
+    }
+  }
+  o {background-color: rgb(237, 255, 208)}
 
  #swapStyleButton, .days-list button {
         background-color: #e18d06;
