--- a/styles.css
+++ b/styles.css
@@ -131,9 +131,28 @@ h3{
     width: 5%;
     height: auto;
     position: absolute;
-    left: 50% ;
-    transform: translateX(-50%);
-}
+    left: 47% ;
+    animation: rotateLogo 2s infinite ease-in-out;
+    }
+    
+    @keyframes rotateLogo {
+      0% {
+        transform: rotate(0deg); 
+      }
+      25% {
+        transform: rotate(-20deg);
+      }
+      50% {
+        transform: rotate(0deg); 
+      }
+      75% {
+        transform: rotate(20deg);
+      }
+      100% {
+        transform: rotate(0deg); 
+      }
+    }
+    
 
 
 /* "What is this?" link styling __________________________________________________________________*/
@@ -213,7 +232,27 @@ textarea {
     height: auto;
     margin: 10px; 
     z-index: -1; 
+    animation: rotateLogo 5s infinite ease-in-out;
   }
+  
+  @keyframes rotateLogo {
+    0% {
+      transform: rotate(0deg); 
+    }
+    25% {
+      transform: rotate(-2deg); 
+    }
+    50% {
+      transform: rotate(0deg); 
+    }
+    75% {
+      transform: rotate(2deg); 
+    }
+    100% {
+      transform: rotate(0deg); 
+    }
+  }
+  
   
 
   .scroll-image:nth-child(even) {
