--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h2 {
       transform: scaleX(1);
     }
     50% {
-      transform: scaleX(1.2); 
+      transform: scaleX(1.1); 
     }
     100% {
       transform: scaleX(1); 
@@ -38,6 +38,21 @@ h2 {
 h3{
   text-align: center;
   font-family: Times New Roman, sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: rgb(196, 248, 162); 
+  border-radius: 10px;
 }
 
 
@@ -232,7 +247,7 @@ textarea {
 }
 
 
-/* Container for images__________________________________________*/
+/* Container for images__________________________________________________________________*/
 .image-container {
     position: relative; 
     z-index: -1;
@@ -338,8 +353,7 @@ textarea {
     background-size: cover;
     --i: 10;
   }
-  /*quote api________________________________*/
-  
+  /*quote api__________________________________________________________________*/
 
 .quote-container {
   text-align: center;
@@ -389,7 +403,7 @@ textarea {
   color: #999;
   font-style: normal;
 }
-/*calendar pop-up_______________________________________________*/
+/*calendar pop-up__________________________________________________________________*/
  .days-button {
             position: fixed;
             bottom: 40px;
