--- a/styles2.css
+++ b/styles2.css
@@ -12,13 +12,13 @@ body{
       background-color:rgb(255, 252, 220);
     }
     50% {
-      background-color: rgb(237, 255, 208);
+      background-color: rgb(239, 255, 208);
     }
     100% {
       background-color: rgb(255, 252, 220);
     }
   }
-  o {background-color: rgb(237, 255, 208)}
+  o {background-color: rgb(248, 255, 208)}
 
  #swapStyleButton, .days-list button {
         background-color: #dae233;
@@ -41,3 +41,8 @@ body{
  .days-list button:hover {
    background-color: #ffaa2b;
 }
+
+::-webkit-scrollbar-thumb {
+   background: rgb(216, 202, 48);
+   border-radius: 10px;
+ }
